clusters/pi-k3s/carl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carl
  namespace: carl
spec:
  selector:
    app: carl
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
